<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.libraryhf.libraryharryfultz.activity.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/changePasswordLabelId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/changePassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/oldPwId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:hint="@string/actualPw"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />

        <EditText
            android:id="@+id/newPwId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:hint="@string/newPw"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />

        <EditText
            android:id="@+id/newPwAgainId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:hint="@string/newPwAgain"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/btn_login_bg"
            android:onClick="validatePassword"
            android:padding="20dp"
            android:text="@string/goOn"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
