<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/hflogo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center">

            <com.vlad1m1r.lemniscate.BernoullisProgressView
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                app:duration="1000"
                app:hasHole="false"
                app:lineColor="@color/white"
                app:lineLength="0.6"
                app:lineLengthChangeable="true"
                app:maxLineLength="0.8"
                app:minLineLength="0.4"
                app:sizeMultiplier="1"
                app:strokeWidth="2dp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />


        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/recoverButtonActivity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_recover_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>